Bug: PRD Reviewer: Lynn Comment: Changed the What's New Comment background icon so the comments number is more readable.

--- a/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
+++ b/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
@@ -403,7 +403,7 @@
 
 .activityStreamNumCommentsPanel
 {
-    background: url(images/comments_22.png) no-repeat scroll center center transparent;
+    background: url(images/comments_25.png) no-repeat scroll center center transparent;
     color: #333333;
     cursor: pointer;
     font-size: 12px;
